--- a/02/week_02.Rmd
+++ b/02/week_02.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Массивы. Логическая индексация"
 author: "Храмов Д. А."
-date: "27.01.2019"
+date: "15.02.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -26,7 +26,7 @@ output:
 A(1,2)      % элемент 1-й строки и 2-го столбца (2)
 A(:,1)      % 1-й столбец
 A(2:3,:)    % строки 2 и 3
-A(3,c(1,3)) % элементы 1-го и 3-го столбца 3-й строки
+A(3,[1,3])  % элементы 1-го и 3-го столбца 3-й строки
 A(5)        % ?  
 ```
 
@@ -339,9 +339,9 @@ E = A*Ai;
 При движении тела, брошенного под углом к горизонту, координаты тела изменяются по закону
 
 $$
-\begin{array}{lcl}
-  \dot x &=& x_0 + v_0 t \cos\alpha, \\
-  \dot y &=& y_0 + v_0 t \sin\alpha - \frac{g t^2}{2}, 
+\begin{array}{lll}
+  x &=& x_0 + v_0 t \cos\alpha, \\
+  y &=& y_0 + v_0 t \sin\alpha - \frac{g t^2}{2}, 
 \end{array}
 $$
 
@@ -351,7 +351,7 @@ $$
 * $g = 9.8$ м/с$^2$ — ускорение силы тяжести;
 * $t$ — время.
 
-Построить график движения тела для первых 2.3 секунд его полета.
+Построить график движения тела для первых 2.3 секунд его полета. Шаг по времени -- 0.01 с.
 
 
 # 2. Логическая индексация
@@ -519,6 +519,8 @@ $$
 ```
 x = [1 -3 0 4 3 -5 -7];
 ```
+
+Запишите вектор `y` для заданного входного вектора `x`.
 
 
 ## Список задач
