--- a/план_курса.Rmd
+++ b/план_курса.Rmd
@@ -2,7 +2,7 @@
 title: "Компьютерная математика"
 subtitle: "Описание и программа курса"
 author: "Храмов Д.А."
-date: "10.02.2019"
+date: "16.02.2019"
 output: 
   html_document:
     toc: true
@@ -48,26 +48,32 @@ output:
 Ввод данных с клавиатуры и из графического окна. Ввод/вывод данных в текстовые файлы. Форматированный ввод/вывод. Массив строк. Операции над файлами. Сохранение/загрузка рабочей среды (save, load).
 
 
-## 5. Векторные преобразования
+## 5. Векторная алгебра. Трехмерная графика
 
-Матричное умножение и его геометрический смысл. Линейная алгебра. Матричное умножение. Преобразование координат на плоскости. Системы линейных уравнений.
+Вектор. Система координат. Норма вектора. Скалярное и векторное произведения. Координаты вектора в разных системах координат. Перенос. Связь новых координат со старыми. Поворот. Формулы для пересчета старых координат в новые. Матрица преобразования координат. Масштабирование. Отражение. Последовательные преобразования. Однородные координаты. Некоммутативность умножения матриц. Обратное преобразование.
 
-
-## 6. Погрешности расчетов. Решение уравнений. Численное интегрирование и дифференцирование
-
-
-## 7. Символьные расчеты
-
-Символьный тип данных и символьные расчеты. Символьные расчеты. Математический Анализ. Преобразование выражений
+Трехмерная графика. Построение графиков кривых и точек в пространстве. Поверхность в трехмерном пространстве. Как задать область определения: meshgrid. Построение графиков функций двух переменных: mesh, surf. Вспомогательные графические функции
 
 
-## 8. Трехмерная графика. Графические объекты
+## 6. Особенности компьютерной арифметики. Символьные расчеты
 
-Построение кривых в пространстве. Построение сетки. Построение поверхностей функциями surf и mesh. «Лёгкие» графические функции. Захват видео.
+Символьный тип данных и символьные расчеты. Символьные расчеты. Математический Анализ: пределы, производные, интегралы, суммирование рядов и др. Преобразование выражений.
 
-Иерархия типов данных. Иерархия графических объектов. Динамическое построение графиков.
+Численное интегрирование и дифференцирование - если функции типа int допускают перегрузку.
 
-Множества Жюлиа и Мандельброта.
+
+## 7. Решение уравнений
+
+Системы линейных уравнений. Функции для решения уравнений (roots, fzero).
+
+
+## 8. Графические объекты. Работа с изображениями и видео
+
+Иерархия типов данных. Иерархия графических объектов. Дескрипторная графика. Динамическое построение графиков.
+
+Изображение. Чтение и запись изображения. Множество Жюлиа и Мандельброта. Игра "Жизнь".
+
+Работа с видео. Захват изображения. Воспроизведение и сохранение видео.
 
 
 ## 9. Эффективное программирование
