Уточнено содержание лекции 6

--- a/план_курса.Rmd
+++ b/план_курса.Rmd
@@ -2,7 +2,7 @@
 title: "Компьютерная математика"
 subtitle: "Описание и программа курса"
 author: "Храмов Д.А."
-date: "16.02.2019"
+date: "23.02.2019"
 output: 
   html_document:
     toc: true
@@ -57,9 +57,15 @@ output:
 
 ## 6. Особенности компьютерной арифметики. Символьные расчеты
 
-Символьный тип данных и символьные расчеты. Символьные расчеты. Математический Анализ: пределы, производные, интегралы, суммирование рядов и др. Преобразование выражений.
+Математический объект и его Компьютерная реализация. Вещественные числа с плавающей точкой. Мантисса и порядок. Расстояние между соседними числами. Машинный эпсилон. Следствия использования чисел с плавающей точкой.
 
-Численное интегрирование и дифференцирование - если функции типа int допускают перегрузку.
+Символьные расчеты. Создание символьных объектов. Решение уравнений и систем. 
+
+Математический Анализ: пределы, производные, интегралы, суммирование рядов, разложение в ряд Тейлора. 
+
+Арифметика заданной точности.
+
+Преобразование и упрощение выражений. Замена выражений. Системы компьютерной математики.
 
 
 ## 7. Решение уравнений
