--- a/план_курса.Rmd
+++ b/план_курса.Rmd
@@ -2,7 +2,7 @@
 title: "Компьютерная математика"
 subtitle: "Описание и программа курса"
 author: "Храмов Д.А."
-date: "23.02.2019"
+date: "27.02.2019"
 output: 
   html_document:
     toc: true
@@ -70,10 +70,17 @@ output:
 
 ## 7. Решение уравнений
 
-Системы линейных уравнений. Функции для решения уравнений (roots, fzero).
+Поиск корней полиномов (roots). Комплексные корни. Поиск действительных корней уравнений (fzero). 
+
+Системы линейных уравнений. Графическая интерпретация решения. Число решений системы. Вырожденные случаи. Детерминант. Плохо обусловленные системы.
 
 
-## 8. Графические объекты. Работа с изображениями и видео
+## 8. Исследование функций
+
+Поиск максимумов и минимумов функций. Точки перегиба.
+
+
+## 9. Графические объекты. Работа с изображениями и видео
 
 Иерархия типов данных. Иерархия графических объектов. Дескрипторная графика. Динамическое построение графиков.
 
@@ -82,7 +89,7 @@ output:
 Работа с видео. Захват изображения. Воспроизведение и сохранение видео.
 
 
-## 9. Эффективное программирование
+## 10. Эффективное программирование
 
 Типичные ошибки. Увеличение скорости или экономия памяти? Оценка быстродействия алгоритма.
 
