--- a/03/week_03.Rmd
+++ b/03/week_03.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Управление вычислительным процессом. Двумерная графика"
 author: "Храмов Д. А."
-date: "02.02.2019"
+date: "02.03.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -360,7 +360,7 @@ end
 
 \Large
 
-Начальный вклад клиента в банк составляет 100000 грн., процент годового дохода — 12%. 
+Начальный вклад клиента в банк составляет 100000 грн., процент годового дохода — 12%. К основной сумме процент не добавляется.
 
 Определите, через сколько лет сумма на счете клиента вдвое превысит начальный вклад.
 
@@ -839,7 +839,7 @@ $$
 y = \left\{
 \begin{array}{ll}
 \pi - \sin x, & -2\pi \le x \le -\pi , \\
-\pi - |x|, & -\pi < x \le -\pi , \\
+\pi - |x|, & -\pi < x \le \pi , \\
 \pi - \sin^3 x, & \pi < x \le 2\pi .
 \end{array}
 \right.
