--- a/план_курса.Rmd
+++ b/план_курса.Rmd
@@ -2,7 +2,7 @@
 title: "Компьютерная математика"
 subtitle: "Описание и программа курса"
 author: "Храмов Д.А."
-date: "27.02.2019"
+date: "03.03.2019"
 output: 
   html_document:
     toc: true
@@ -75,9 +75,11 @@ output:
 Системы линейных уравнений. Графическая интерпретация решения. Число решений системы. Вырожденные случаи. Детерминант. Плохо обусловленные системы.
 
 
-## 8. Исследование функций
+## 8. Исследование функций. Составные типы данных
 
-Поиск максимумов и минимумов функций. Точки перегиба.
+Построение асимптот. Поиск максимумов и минимумов. Точки перегиба.
+
+Таблица типов данных MATLAB. Структуры. Ячейки.
 
 
 ## 9. Графические объекты. Работа с изображениями и видео
