--- a/план_курса.Rmd
+++ b/план_курса.Rmd
@@ -2,7 +2,7 @@
 title: "Компьютерная математика"
 subtitle: "Описание и программа курса"
 author: "Храмов Д.А."
-date: "03.03.2019"
+date: "09.03.2019"
 output: 
   html_document:
     toc: true
@@ -82,23 +82,19 @@ output:
 Таблица типов данных MATLAB. Структуры. Ячейки.
 
 
-## 9. Графические объекты. Работа с изображениями и видео
+## 9. Графические объекты. Работа с изображениями
 
-Иерархия типов данных. Иерархия графических объектов. Дескрипторная графика. Динамическое построение графиков.
+Иерархия графических классов. Конструкторы объектов. Указатели (дескрипторы) объектов. Управление свойствами объектов. Динамическое построение графиков. Запись видео.
 
-Изображение. Чтение и запись изображения. Множество Жюлиа и Мандельброта. Игра "Жизнь".
+Изображения. Чтение и запись изображений. Информация об изображении.
 
-Работа с видео. Захват изображения. Воспроизведение и сохранение видео.
-
-
-## 10. Эффективное программирование
-
-Типичные ошибки. Увеличение скорости или экономия памяти? Оценка быстродействия алгоритма.
+Фракталы. Множество Жюлиа. Одномерный клеточный автомат. Игра "Жизнь".
 
 
 ## Литература
 
 1. Ануфриев И. Е., Смирнов А. Б., Смирнова Е. Н. MATLAB 7. - СПб.: БХВ-Петербург. 2005.
 2. Хант Б. и др. Matlab R2007 с нуля! - М.: Лучшие книги, 2008.
-3. MatLab. Язык технических вычислений. Вычисление, визуализация, программирование / Пер. с англ. Конюшенко В.В.
+3. MATLAB. Язык технических вычислений. Вычисление, визуализация, программирование / Пер. с англ. Конюшенко В.В.
+4. [Pascal Getreuer. Writing Fast MATLAB Code](http://www.csc.kth.se/utbildning/kth/kurser/DN2255/ndiff13/matopt.pdf)
 
