Исправлен символ табуляции

--- a/04/week_04.Rmd
+++ b/04/week_04.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Функции. Ввод/вывод"
 author: "Храмов Д. А."
-date: "17.02.2019"
+date: "17.03.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -349,7 +349,7 @@ A = input('Текст приглашения')
 M = dlmread('имя','разделитель')
 ```
 
-Разделители: пробел (по умолчанию), запятая, табуляция ('\t').
+Разделители: пробел (по умолчанию), запятая, табуляция (`'\t'`).
 
 ```
 dlmwrite('file.txt',M,'разделитель') 
