Исправлены мелкие ошибки.

--- a/02/week_02.Rmd
+++ b/02/week_02.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Массивы. Логическая индексация"
 author: "Храмов Д. А."
-date: "10.04.2019"
+date: "11.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -370,7 +370,7 @@ $$
 Есть еще `&& (И)` и `|| (ИЛИ)` — они применяются для скаляров и реализуют короткий цикл вычислений (второй операнд оценивается только в том случае, когда результат не определяется полностью первым операндом).
 
 
-## Логическая индексация
+## Обращение к элементам массива
 
 Обращаться к элементам массива можно:
 
@@ -382,7 +382,7 @@ $$
 A |6 |7 |8 |9 |10|
 LI|0 |0 |1 |0 |1 |
 
-Логический индекс (маска) — это массив, имеющий тот же размер, что и исходный A, но состоящий из 0 и 1. Единицы указывают на выбранные элементы исходного массива A.
+**Логический индекс (маска)** — это массив, имеющий тот же размер, что и исходный A, но состоящий из 0 и 1. Единицы указывают на выбранные элементы исходного массива A.
 
 Выберем 3-й и 5-й элементы массива A:
 
