--- a/06/week_06.Rmd
+++ b/06/week_06.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Особенности компьютерной арифметики. Символьные вычисления"
 author: "Храмов Д. А."
-date: "24.02.2019"
+date: "11.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -258,6 +258,7 @@ $$
 7x_1 + 6x_2 + 5x_3 &=& -7 \\
 \end{array}
 $$
+
 1. при помощи `solve()`;
 2. используя матричную запись системы $Ax=b$.
 
@@ -515,7 +516,7 @@ my_pi =
 
 Мы можем получать формулы, даже не зная стоящей за ними математической теории. Но чтобы воспользоваться результатами, нужно вспомнить все предположения, которые делаются при расчетах. 
 
-Даже в этом случае результат все равно может получиться громоздким. ТОгда можно попробовать упростить его.
+Даже в этом случае результат все равно может получиться громоздким. Тогда можно попробовать упростить его.
 
 
 ## Функции преобразования/упрощения выражений
