Исправлены мелкие ошибки.

--- a/03/week_03.Rmd
+++ b/03/week_03.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Управление вычислительным процессом. Двумерная графика"
 author: "Храмов Д. А."
-date: "02.03.2019"
+date: "14.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -458,8 +458,8 @@ $$
 
 ## Экстренный выход из цикла
 
-* `break` — выход из цикла. Во вложенных циклах выходит из только из внутреннего. break вне цикла прекращает выполнение скрипта или функции.
-* `continue` — передает управление в следующую итерацию цикла, пропуская операторы, которые записаны за ним, причем во вложенном цикле он передает управление на следующую итерацию основного цикла.
+* `break` — выход из цикла. Во вложенных циклах выходит из внутреннего цикла. break вне цикла прекращает выполнение скрипта или функции.
+* `continue` — передает управление в следующую итерацию цикла, пропуская операторы, которые записаны за ним. Во вложенном цикле передает управление на следующую итерацию основного цикла.
 
 
 ## Пример: прерывание цикла с помощью break
@@ -673,8 +673,8 @@ $$
 
 ## Вывод графиков в одном графическом окне на разных координатных осях: subplot
 
-* `subplot` разделяет графическое окно на матрицу, состоящую из m x n графиков, и делает график номер p текущим. 
-* Графики нумеруются по строкам: начиная с первой строчки, слева направо и сверху вниз
+* `subplot(m,n,p)` разделяет графическое окно на матрицу, состоящую из m x n графиков, и делает p-й график текущим. 
+* Графики нумеруются по строкам: начиная с первой строчки, слева направо и сверху вниз.
 
 ```
 subplot(2,2,3)
@@ -750,7 +750,7 @@ figure(2)
 axis([xmin xmax ymin ymax])
 ```
 
--- Устанавливает диапазон выводимых значений координат `x` и `y`.
+Устанавливает диапазон выводимых значений координат `x` и `y`.
 
 Начало координат помещается в нижнем левом углу. Ось $X$ направлена вправо, ось $Y$ — вверх. Как в математике.
 
@@ -776,8 +776,8 @@ plot(exp(i*x))
 
 ## Команды axis
 
-* `axis equal` –  устанавливает масштабы, который обеспечивает одинаковые расстояния вдоль осей. Ее можно использовать в предыдущем примере.
-* `axis square` – устанавливает масштабы  и делает оси равной длины. Оси станут «квадратными».
+* `axis equal` –  устанавливает масштаб, который обеспечивает одинаковые расстояния вдоль осей. Ее можно использовать в предыдущем примере.
+* `axis square` – делает оси равной длины. Оси станут «квадратными».
 * `axis on/off` – включает/отключает отображение осей координат. Удобно для вывода «художественных» рисунков.
 * `axis ij` — помещает начало координат в верхний левый угол.
 * `axis auto` – возвращает отображение осей в автоматический режим.
@@ -852,11 +852,12 @@ $$
 
 ## Что происходит при выполнении plot
 
-1. создается графическое окно (серая подложка с меню и панелями инструментов);
-2. в окне создаются оси координат (белое пространство с осями), причем автоматически подбираются диапазоны изменения переменных (x от и до, y от и до);
-3. в осях строится график.
+1. Создается графическое окно (серая подложка с меню и панелями инструментов).
+2. В окне создаются оси координат (белое пространство с осями), причем автоматически подбираются диапазоны изменения переменных (`x` от и до, `y` от и до).
+3. В осях строится график.
 
 На каждом этапе работы создается объект и требуемым образом изменяются его свойства. 
+
 
 ## Графические объекты (упрощенная схема)
 
@@ -867,10 +868,10 @@ $$
 1. root (корень) — первичный объект (экран компьютера). В работе не используется.
 2. figure (рисунок) — графическое окно. В окне можно разместить:
 3. axes (оси) — координатные оси, а в них:
-    * line (линия) — линия. Этот тип объектов задает кривая графики функции одной переменной.
+    * line (линия) — к этому типу объектов принадлежат кривые графиков функций одной переменной.
     * text (текст) — текстовая надпись в заданном месте графика.
     
-При вызове `plot` последовательно строятся объекты Figure, Axes, Line и изменяются их свойства.
+При вызове `plot` последовательно строятся объекты `Figure`, `Axes`, `Line` и изменяются их свойства.
 
 
 ## Замечание на будущее
@@ -902,7 +903,7 @@ semilogy(x,y)
 loglog(x,y)    % лог. масштаб по обеим осям
 ```
 
-Такие графики очень удобны для построения экспоненциальных зависимостей. В таком масштабе подобные зависимости представляются прямыми линиями.
+Такие графики очень удобны для построения экспоненциальных зависимостей. В логарифмическом масштабе эти зависимости представляются прямыми линиями.
 
 ```
 t = 1:100;
@@ -914,7 +915,11 @@ semilogy(t,e2(t)) % прямая y = 2*t
 
 ## Специальные координаты
 
-* polar(phi,rho) — полярные координаты; phi – угол, rho – радиус (векторы одинаковой размерности).
+\Large
+
+`polar(phi,rho)` — полярные координаты; 
+
+`phi` – угол, `rho` – радиус (векторы одинаковой размерности).
 
 
 ## С помощью полярных координат можно построить каннаболу
