--- a/06/week_06.Rmd
+++ b/06/week_06.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Особенности компьютерной арифметики. Символьные вычисления"
 author: "Храмов Д. А."
-date: "11.04.2019"
+date: "12.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -422,7 +422,7 @@ $$
 ```
 taylor(f,x,x0)
 ```
-`f` – функция; `x` – переменная дифференцирования; `x0` – точка, в окрестности которой выполняется разложение. По умолчанию возвращает 5 первіх членов ряда.
+`f` – функция; `x` – переменная дифференцирования; `x0` – точка, в окрестности которой выполняется разложение. По умолчанию возвращает 5 первых членов ряда.
 
 Разложим в ряд Тейлора функцию $y = \sin x$ в окрестности точки $x=0$
 ```
