--- a/04/week_04.Rmd
+++ b/04/week_04.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Функции. Ввод/вывод"
 author: "Храмов Д. А."
-date: "17.03.2019"
+date: "17.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -20,7 +20,7 @@ output:
 
 Если код получается универсальным и нужен в разных программах — создаем подпрограммы.
 
-**Подпрограмма** — поименованная часть компьютерной программы, содержащая описание определённого набора действий. Подпрограмма может быть многократно вызвана из разных частей программы.
+**Подпрограмма** — поименованная часть компьютерной программы, содержащая описание определённого набора действий. Подпрограмма может быть многократно вызвана из разных частей программы и разных программ.
 
 
 ## Сохранение фрагмента скрипта в отдельном файле
@@ -91,9 +91,9 @@ end
 
 \label{t01}
 
-Создайте функцию `square`, реализующую сумму квадратов двух чисел (как в примере с фрагментом скрипта). Сохраните ее в файле.
+Создайте функцию `squares`, реализующую сумму квадратов двух чисел. Сохраните ее в файле.
 
-Создайте основной файл для вызова `square()` и продемонстрируйте ее работоспособность.
+Создайте основной файл для вызова `squares()` и продемонстрируйте ее работоспособность.
 
 
 ## Формальные и фактические параметры функций
@@ -120,6 +120,7 @@ x = 13;
 ## Точка останова (breakpoint)
 
 ![](images/ff01.png)
+
 
 ## Запускаем основной скрипт
 
@@ -161,14 +162,14 @@ global x y z
 
 \small
 
-"Задатель" значения глобальной переменной:
+Функция-"задаватель" значения глобальной переменной:
 ```
 function setGlobalx(val)
 global x
 x = val;
 ```
 
-Получатель значения глобальной переменной:
+Функция-получатель значения глобальной переменной:
 ```
 function r = getGlobalx
 global x
@@ -189,7 +190,7 @@ r =
 
 ## Объединение набора скалярных параметров в массив
 
-Массив параметров — борьба с «перенаселенностью» параметров.
+Массив параметров — борьба с «перенаселенностью» списка аргументов функции.
 
 Вместо:
 
@@ -234,9 +235,9 @@ ans =
 Основная ошибка при создании функций происходит при передаче данных. Поэтому
 
 1. Проверьте правильность работы нужного фрагмента внутри программы, а затем выносите его в отдельную функцию. 
-2. Выводите переданные в функцию параметры. 
+2. Проверьте правильность передачи параметров в функцию (выведите только что переданные параметры на экран). 
 
-Тест на маленьком примере, а затем перенос в большую программу.
+Тестируйте на маленьком примере, а затем переносите в большую программу.
 
 
 ## Задача 2.
@@ -274,7 +275,7 @@ else
 end
 ```
 
-Что произойдет, если мы наберем pwfun(‘s’) или если вместо скалярного аргумента будет использован массив?
+Что произойдет, если мы наберем `pwfun('s')` или если вместо скалярного аргумента будет использован массив?
 
 
 ## Добавим проверку
@@ -307,7 +308,7 @@ end
 ```
 
 * `warning()` выдает предупреждение, но продолжает выполнение программы.
-* `isnan` и `isinf` — проверка на принадлежность к NaN или бесконечностям.
+* `isnan` и `isinf` — проверка на принадлежность к NaN или к бесконечностям.
 
 
 
@@ -321,7 +322,7 @@ end
 A = input('Текст приглашения')
 ```
 
-В CW возникает строка с текстом приглашения. Пользователь вводит значение, которое сохранится в массиве A и жмет *Enter*.
+В CW появится строка с текстом приглашения. Пользователь вводит значение, которое сохранится в массиве A и жмет *Enter*.
 
 **Ввод графических данных с помощью мыши:**
 
@@ -338,7 +339,7 @@ A = input('Текст приглашения')
 * Все файлы – бинарные "в глубине души".
 * Текстовый формат: строки, разделенные признаком конца строки (CR+LF в Win).
 
-*Что такое «Возврат каретки» (Carriage Return, Line Feed)?*
+**Что такое «Возврат каретки» (CR -- Carriage Return) и «Перевод строки» (LF -- Line Feed)?**
 
 
 ## Ввод/вывод данных из файла. Однородные данные
@@ -388,7 +389,7 @@ dlmwrite('c:/temp/ data.txt',M,',')
 * `imread/imwrite` — графические файлы;
 * `wavread/wavwrite` — аудиофайлы;
 * `aviread/movie2avi` — видеофайлы;
-* `xlsread/xlswrite` — чтение файлов Excel.
+* `xlsread/xlswrite` — файлы Microsoft Excel.
 
 
 ## Задача 4.
@@ -407,7 +408,7 @@ dlmwrite('c:/temp/ data.txt',M,',')
 Составьте программу, которая:
 
 * создает матрицу `A` размера 5х3, состоящую из случайных чисел, равномерно распределенных в интервале $[0;10]$;
-* сохраните ее в текстовом файле `data.txt` с разделителем `';'`;
+* сохраняет ее в текстовом файле `data.txt` с разделителем `';'`;
 * загружает эту матрицу в Workspace с помощью `dlmread()`.
 
 
@@ -415,8 +416,10 @@ dlmwrite('c:/temp/ data.txt',M,',')
 
 \label{t06}
 
-* Считать данные из таблицы `ExpData.xls`.
-* Считать данные с листа `Лист2` из ячеек `B2:C4` той же таблицы.
+Составьте программу, которая:
+
+* Считывает данные из таблицы `ExpData.xls`.
+* Считывает данные из ячеек `B2:C4` листа `Лист2` той же таблицы.
 
 
 ## Ввод/вывод данных из файла: общий случай
@@ -425,7 +428,7 @@ dlmwrite('c:/temp/ data.txt',M,',')
 
 **Открытие/закрытие файла:**
 
-`fid = fopen('имя','доступ')` — открывает файл и заносит идентификатор файла в переменную `fid` и дальше мы работаем только со значением `fid`.
+`fid = fopen('имя','доступ')` — открывает файл и заносит идентификатор файла в переменную `fid`. Дальше мы работаем только со значением `fid`.
 
 `status = fclose(fid)` — закрытие файла (в status заносятся сообщения о возможных ошибках).
 
@@ -478,7 +481,7 @@ disp(tfile)
 строка3
 ```
 
-Строки могут быть разной длины, char их дополнит пробелами до максимальной строки
+Строки могут быть разной длины, char их дополнит пробелами до максимальной строки.
 
 ```
 S = char(‘a’, ‘abc’, ‘ab’)
@@ -487,7 +490,7 @@ S = char(‘a’, ‘abc’, ‘ab’)
 	ab 
 ```	
 
-Размерность S: 3x3.
+Размерность `S`: 3x3.
 
 
 ## Форматный вывод в текстовый файл
@@ -498,16 +501,16 @@ fprintf(fid, 'формат', x, y, z)
 
 `fid` — идентификатор, `x,y,z` — список выводимых переменных. 
 
-Формат — список форматов, указывающих на то, как именно выводить массив:
+`формат` — список форматов (шаблонов вывода), указывающих на то, как именно выводить массив:
 
 * `%s` --	строка символов (до пробела)
 * `%f` --	число с фиксированной точкой
-* `%e` --	экспоненциальное представление: `1000 = 1e3`
+* `%e` --	число в экспоненциальном представлении: `1000 = 1e3`
 * `%c` --	одиночный символ (в т.ч. пробел)
 
-Форматы `\n,\t` служат для создания перехода на новую строку и символа табуляции. 
+Форматы `\n`, `\t` служат для создания перехода на новую строку и добавления символа табуляции соответственно. 
 
-Стандарт записи форматных строк соответствует ANSI C.
+Стандарт записи форматных строк: ANSI C.
 
 
 ## Ширина поля вывода
@@ -518,7 +521,7 @@ fprintf(fid, 'формат', x, y, z)
 
 ![](images/format.png)
 
-* `%6.2f` — Всего 6 позиций (включая точку и знак числа), 2 после точки.
+* `%6.2f` — Всего 6 позиций, включая точку и знак числа. Из них 2 -- после точки.
 * Затем, как и в формате, идет пробел.
 * `%12.8f` — 12 позиций, 8 после точки.
 
@@ -565,11 +568,11 @@ x =   0.10 exp(x) =   1.10517092
 
 ## textread — считывание форматированных данных из файла
 
+Чтение данных из файла `имя` и размещение его содержимого в переменных `A,B,C,….`
+
 ```
 [A,B,C, ...] = textread('имя','формат')
 ```
-
-чтение данных из файла `имя` и размещение его содержимого в переменных `A,B,C,….`
 
 Тип каждого аргумента определяется строкой `формат`. Если эта строка пуста, то будут считываться только численные данные.
 
@@ -592,7 +595,7 @@ Nikodim  34.90 12 No
 [names,x,y,answer] = textread('data.txt','%s%f%d%s');
 ```
 
-Русские буквы в файле могут оказаться испорченными.
+Символы кириллицы в файле могут оказаться испорченными.
 
 
 # Операции над файлами
@@ -600,7 +603,7 @@ Nikodim  34.90 12 No
 ##
 
 * Открыть файл: `open('foo.m')`
-* Удалить файл: `delete(‘имя_файла’)` или `delete имя файла`.
+* Удалить файл: `delete(‘имя_файла’)` или `delete имя_файла`.
 * Есть еще `save`, `saveas`, `print`, …
 * Список файлов в каталоге: `dir('имя_каталога')`
 * Создать каталог (внутри текущего): `mkdir('имя_каталога')`
