--- a/05/week_05.Rmd
+++ b/05/week_05.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Векторная алгебра. Трехмерная графика"
 author: "Храмов Д. А."
-date: "17.02.2019"
+date: "17.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -28,7 +28,7 @@ output:
 
 ![](images/vec02.pdf)
 
-Дает возможность ввести понятие координат вектора: $\vec{AB} = (x_2 - x_1, y_2 - y_1)$. 
+Дает возможность ввести координаты вектора: $\vec{AB} = (x_2 - x_1, y_2 - y_1)$. 
 
 **Внимание!** *В программировании, для краткости, "вектором" называют одномерный массив чисел. Такой массив действительно может представлять координаты вектора. Но сам вектор — это геометрический объект, который от выбора системы координат не зависит.*
 
@@ -201,7 +201,7 @@ P =
 x \\
 y
 \end{array}
-\right].
+\right],
 $$
 запишем формулы преобразования координат в матричном виде
 $$
@@ -702,10 +702,10 @@ plot3(X,Y,Z,'r.'), grid, title('Сфера'), axis square
 \includegraphics[width=0.7\textwidth]{images/surface_ex2.png}
 \end{center}
 
-Каждой точке с координатами `x` и `y` соответствует «высота» `z` (значение функции). 
+Каждой точке с координатами `x` и `y` соответствует «высота» `z` -- значение функции. 
 
 
-## Как задать область определения
+## Как задать область определения функции
 
 Чтобы построить график функции одной переменной $y=f(x)$, мы изменяли аргумент $x$ с заданным шагом и вычисляли соответствующие значения функции $y$ (`linspace`).
 
@@ -793,10 +793,10 @@ Z = X.^2 + Y.^2;  % поэлементное действие!
 
 Поверхности строятся одним из следующих способов:
 
-* `mesh(X,Y,Z)` – проволочный каркас поверхности.
-* `surf(X,Y,Z)` – грани, соединяющие ребра каркаса.
+* `mesh(X,Y,Z)` -- проволочный каркас поверхности.
+* `surf(X,Y,Z)` –- грани, соединяющие ребра каркаса.
 
-Каркас окрашен в зависимости от значения функции в данной точки. Например, большие значения функции окрашены в более теплые цвета (максимальное – в ярко красный), меньшие – в более холодные (наименьшее – в синий).
+Каркас окрашен в зависимости от значения функции в данной точки. Например, большие значения функции окрашены в более теплые цвета (максимальное –- в ярко красный), меньшие –- в более холодные (наименьшее –- в синий).
 
 Принцип раскраски граней тот же, что у каркаса.
 
@@ -869,13 +869,13 @@ plot3(j,i,Z(i,j),'m.','MarkerSize',30)
 
 Большинство вспомогательных функций, определяющих внешний вид графика в плоском случае, работают и в трехмерной графике. 
 
-*	`axis` – управление свойствами осей координат сохраняют свои свойства и в трехмерной графике. Только добавляется третья ось координат:
+*	`axis` -- управление свойствами осей координат сохраняют свои свойства и в трехмерной графике. Добавляется третья ось координат:
 `axis([xmin xmax ymin ymax zmin zmax])`
 *	Для обозначения по оси z используется функция `zlabel`: `zlabel('строка')`
 
-Кроме этого существуют функции, специально предназначенные только для трехмерной графики. Например:
+Существуют функции, специально предназначенные только для трехмерной графики. Например:
 
-*	`hidden on/off` – {включить}/выключить удаление невидимых линий.
+*	`hidden on/off` -- {включить}/выключить удаление невидимых линий.
 
 
 ## Ссылки
