--- a/06/week_06.Rmd
+++ b/06/week_06.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Особенности компьютерной арифметики. Символьные вычисления"
 author: "Храмов Д. А."
-date: "12.04.2019"
+date: "23.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -106,12 +106,12 @@ ans =
     1.797693134862316e+308
 ```
 
-* Числа, меньшие по модуля $X_0$ для машины не различимы и представляют собой **машинный нуль** ($X_0 \ll \varepsilon$). 
+* Числа, меньшие по модулю $X_0$ для машины не различимы и представляют собой **машинный нуль** ($X_0 \ll \varepsilon$). 
 * Числа, большие $X_\infty$ рассматриваются как машинная **бесконечность** (`Inf`).
 * Диапазон представления чисел на компьютере определяется разрядностью порядка.
 
 
-## Следствие 3. Числа на "компьютерной" числовой прямой распределены неравномерно.
+## Следствие 3. Числа на "компьютерной" числовой прямой распределены неравномерно
 
 ![Плотность чисел с плавающей точкой возрастает по мере приближения к нулю и убывает по мере отдаления](images/machine_line.png)
 
@@ -567,7 +567,7 @@ ans = (x-1)*(x-2)*(x-3)
 
 ## Упрощение методом грубой силы: `simple()`
 
-`simple(f)` — упрощает символьные выражения, применяя для этого `simplify`, `collect`, `factor` и другие подобные функции, f затем возвращает самый короткий результат. Работает медленнее всех остальных функций упрощения.
+`simple(f)` — упрощает символьные выражения, применяя для этого `simplify`, `collect`, `factor` и другие подобные функции, а затем возвращает самый короткий результат. Работает медленнее всех остальных функций упрощения.
 
 
 ## Подстановка одного выражения в другое: subs
