--- a/07/week_07.Rmd
+++ b/07/week_07.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Решение уравнений"
 author: "Храмов Д. А."
-date: "02.03.2019"
+date: "24.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -37,7 +37,7 @@ C = [c(1) c(2) … c(n) c(n+1)]
 ```
 `roots(C)` — вычисляет корни полинома (действительные и комплексные), коэффициенты которого заданы вектором `C`.
 
-Число элементов вектора C всегда на единицу больше степени полинома. Нулевые коэффициенты должны содержаться в векторе.
+Число элементов вектора `C` всегда на единицу больше степени полинома. Нулевые коэффициенты должны содержаться в векторе.
 
 
 ## Пример. Найти корни полинома $2x^2+3x+1=0$. 
@@ -238,7 +238,7 @@ $$
 2. `fzero()`
 
 
-## Зачем нужно несколько функций
+## Зачем нужно несколько функций поиска корней?
 
 `solve()` ищет аналитические и численные решения уравнений, работает с более широким классом функций, чем `roots` и единственная среди подобных функций работает с системами уравнений. Зачем тогда нужны остальные функции?
 
@@ -280,7 +280,7 @@ a_{n1} x_1 + a_{n2} x_2 + \ldots + a_{nn} x_n &=& b_n . \\
 \end{array}
 $$
 
-И в матричной записи имеет вид
+В матричной записи система линейных уравнений имеет вид
 $$
 Ax = b .
 $$
@@ -463,7 +463,7 @@ x =
 
 \small
 
-С точки зрения чистой математики системы линейных уравнений вида 2 и 3 являются вырожденными случаями. На практике такие системы -- редкость. Зато часто встречаются почти вырожденные системы, при решении которых можно получить недостоверные значения неизвестных. Рассмотрим систему:
+Системы линейных уравнений вида 2 и 3 являются вырожденными случаями. На практике гораздо чаще встречаются почти вырожденные системы, при решении которых можно получить недостоверные значения неизвестных. Рассмотрим систему:
 
 ![Если коэффициенты системы заданы приближенно, то вместо точного решения (1,1), можно получить сильно отличающееся от него решение. Например,  (2.415,0)](images/lin04.png)
 
