--- a/08/week_08.Rmd
+++ b/08/week_08.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Исследование функций. Составные типы данных"
 author: "Храмов Д. А."
-date: "03.03.2019"
+date: "24.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -216,6 +216,8 @@ ans =
 
 ## Больше методов оптимизации
 
+\Large
+
 * Optimization Toolbox (fminsearch)
 * Global Optimization Toolbox
     * Прямые методы поиска
@@ -236,7 +238,7 @@ ans =
 представляет собой элемент данных, содержащий разнотипные поля.
 
 ```
-S.name = 'Иван Петров';
+S.name = 'Juan Петров';
 S.date = '5-05-2010';
 S.grade = 4;
 ```
@@ -255,7 +257,7 @@ S(2).name = 'Маша Антипенко';
 S(2).date = '6-05-2010';
 S(2).grade = 5;
 ```
-(индекс конкретной структуры, в массиве указывается после имени массива)
+Индекс конкретной структуры в массиве указывается после имени массива.
 
 * вместе, с помощью функции `struct`
 
@@ -276,7 +278,7 @@ S(3) = struct('name','Света Захарова','date', ...
 * для настройки параметров,
 * для сообщения дополнительных подробностей о результате.
 
-Например, структуры используются функциями, реализующими вычислительные методы. Кроме результата такие функции могут сообщать данные об используемом методе, количестве сделанных приближений и т.п., т.е. информацию которую нельзя представить в виде только чисел или только строк.
+Например, структуры используются функциями, реализующими вычислительные методы. Кроме результата такие функции могут сообщать об используемом методе, о количестве сделанных приближений и т.п., т.е. информацию которую нельзя представить в виде только чисел или только строк.
 
 
 ## Массивы ячеек
@@ -291,7 +293,6 @@ S(3) = struct('name','Света Захарова','date', ...
 Элементами массива ячеек (cell array) могут быть любые типы данных, в том числе и другие массивы ячеек. 
 
 Мы уже не раз использовали массивы ячеек: в виде массивов ячеек организовано хранение входных и выходных параметров функций.
-
 
 Массив ячеек создается путем заключения группы объектов в фигурные скобки:
 ```
