--- a/09/week_09.Rmd
+++ b/09/week_09.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Графические объекты. Работа с изображениями"
 author: "Храмов Д. А."
-date: "09.03.2019"
+date: "25.04.2019"
 fontenc: "T2A"
 fonttheme: "professionalfonts"
 output: 
@@ -138,7 +138,7 @@ get(h)
 
 ## Управление свойствами объектов: set(h)
 
-Изменить свойств объекта позволяет функция `set`:
+Изменить свойства объекта позволяет функция `set`:
 ```
 set(h, 'Color', [0 1 0]) % можно 'g', 'green'.
 ```
@@ -238,9 +238,12 @@ A = imread(filename, fmt)
 
 Любой цвет задается смесью красного (Red), зеленого (Green) и синего (Blue) цветов. 
 
-Интенсивность пиксела цветного изображения характеризуется тремя числами: I(M,N,3). M, N – разрешение (количество пикселей) по Ox, Oy.
+Интенсивности пикселей цветного изображения хранятся в трехмерном массиве I(M,N,3). M, N – количество пикселей по X и Y.
+Каждый пиксел (i,j) цветного изображения характеризуется тремя числами: 
 
-I(:,:,1) -- интенсивность красного цвета, I(:,:,2) — интенсивность зеленого и I(:,:,3) — синего.
+* I(i,j,1) -- интенсивностью красного цвета, 
+* I(i,j,2) -- интенсивностью зеленого цвета и 
+* I(i,j,3) -- интенсивностью синего цвета.
 
 Интенсивность -- положительное целое число: `uint*`.
 
@@ -344,7 +347,7 @@ $$
 Z_{n+1} = Z_{n}^2 + C .
 $$
 
-Оказалось, что после нескольких итераций точки либо остаются в пределах ограниченной области, либо "убегают" на бесконечность. 
+Оказалось, что после нескольких итераций точки либо остаются в ограниченной области, либо "убегают" на бесконечность. 
 
 
 ## Остающиеся точки
@@ -457,7 +460,7 @@ imagesc(B);
 
 \label{t04}
 
-Запрограммируйте для одномерного КА следующие правила 
+Запрограммируйте для одномерного КА следующие правила: 
 
 111	| 110	| 101	| 100	| 011	| 010	| 001	| 000 |
 ----|-----|-----|-----|-----|-----|-----|-----|
